--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 database {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost/challenge"
+  url = "jdbc:postgresql://localhost/tinder"
   user = "nikalaikina"
   password = ""
 }
